--- a/TODO
+++ b/TODO
@@ -1,15 +1,17 @@
-- online mode (encyrption)
-- when sending a packet, if you don't fill in all fields you will get an attribute error
-- need a way to say "me too" to be notified about packets that an upstream reactor has already expressed interest in
-- what about being updated when an upstream reactors handler method is called?
+- fall when there are no blocks
 
-- hotbar
-	- select
-	- drop (#/all)
+- nudgeable (right now when collided with by another player the agent doesn't move)
+- centre self in block (or nudge self to place blocks properly)
+
+- acceleration when moving
+
 - inventory
-	- hotbar
-	- armor
-	- crafting
 - use item in hand
-- place block
 - use "thing" (crafting table, chest, forge, lever, button, etc.)
+
+- pathfinding over rough terrain
+- follow player
+
+- build using MC-SDF blueprints
+
+- "scan" structures into MC-SDF blueprints
